# src/main/resources/api.yaml
@@ -131,19 +131,6 @@ paths:
       summary: Login an existing user
       operationId: loginUser
       description: Login an existing user
-#      parameters:
-#        - in: path
-#          name: email
-#          required: false
-#          description: The email of the user
-#          schema:
-#            type: string
-#        - in: path
-#          name: password
-#          required: false
-#          description: The password of the user
-#          schema:
-#            type: string
       requestBody:
         description: User login details
         required: true
@@ -158,11 +145,116 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserDto'
-
-  ###########################################################################################
-  # Package
-  ###########################################################################################
-
+  ###################################
+  ###########    Product    #########
+  ###################################
+  /products:
+    get:
+      tags:
+        - Products
+      summary: Get all products
+      operationId: getAllProducts
+      description: Retrieve a list of all products.
+      responses:
+        '200':
+          description: A list of products.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ProductDto'
+    post:
+      tags:
+        - Products
+      summary: Create a new product
+      operationId: createProduct
+      description: Add a new product to the catalog.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ProductDto'
+      responses:
+        '201':
+          description: Product created successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductDto'
+  /products/{id}:
+    get:
+      tags:
+        - Products
+      summary: Get a product by ID
+      operationId: getProductById
+      description: Retrieve details of a specific product by its ID.
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: The ID of the product.
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: Product details retrieved successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductDto'
+        '404':
+          description: Product not found.
+    put:
+      tags:
+        - Products
+      summary: Update a product
+      operationId: updateProduct
+      description: Update details of an existing product.
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: The ID of the product to update.
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ProductDto'
+      responses:
+        '200':
+          description: Product updated successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductDto'
+        '404':
+          description: Product not found.
+    delete:
+      tags:
+        - Products
+      summary: Delete a product
+      operationId: deleteProduct
+      description: Remove a product from the catalog.
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: The ID of the product to delete.
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '204':
+          description: Product deleted successfully.
+        '404':
+          description: Product not found.
 components:
   schemas:
     UserDto:
@@ -216,3 +308,19 @@ components:
       required:
         - email
         - password
+    ProductDto:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          description: The id of the product
+        name:
+          type: string
+          description: The name of the product
+        description:
+          type: string
+          description: Description of the product
+        price:
+          type: number
+          format: double
